[gd_scene load_steps=31 format=2]

[ext_resource path="res://prefabs/Player_world.gd" type="Script" id=1]
[ext_resource path="res://assets/White-Background.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/world.gd" type="Script" id=3]
[ext_resource path="res://prefabs/Floor_spwn.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/OS2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Dino_Player.gd" type="Script" id=6]
[ext_resource path="res://scripts/CollisionShape2D3.gd" type="Script" id=7]
[ext_resource path="res://assets/running1.png" type="Texture" id=8]
[ext_resource path="res://assets/dead.png" type="Texture" id=9]
[ext_resource path="res://assets/running3.png" type="Texture" id=10]
[ext_resource path="res://assets/running4.png" type="Texture" id=11]
[ext_resource path="res://assets/duck1.png" type="Texture" id=12]
[ext_resource path="res://assets/duck2.png" type="Texture" id=13]
[ext_resource path="res://scripts/AnimatedSprite.gd" type="Script" id=14]
[ext_resource path="res://scripts/dino_area.gd" type="Script" id=15]
[ext_resource path="res://scripts/Enemy_Dino.gd" type="Script" id=16]
[ext_resource path="res://assets/reload_button.png" type="Texture" id=17]
[ext_resource path="res://assets/Button(1)/button20.png" type="Texture" id=18]
[ext_resource path="res://assets/Button/button0.png" type="Texture" id=19]
[ext_resource path="res://prefabs/Score_Generation.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/vcr_osd_mono/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://scripts/Score_Generation.gd" type="Script" id=22]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10.7636, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.83787, 11.4513 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idel",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "running",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "duck",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 60, 58 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 9.83787, 11.4513 )

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idel",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "running",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "duck",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 60, 58 )

[sub_resource type="DynamicFont" id=8]

resource_local_to_scene = true
size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )
_sections_unfolded = [ "Resource", "Settings" ]

[node name="Player_world" type="Node2D" index="0"]

position = Vector2( 48.2349, 578.818 )
script = ExtResource( 1 )

[node name="White-Background" type="Sprite" parent="." index="0"]

modulate = Color( 0.984375, 0.976685, 0.976685, 1 )
position = Vector2( 2598.37, -319.846 )
rotation = -1.5708
scale = Vector2( 1, 3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="world" type="Node" parent="." index="1"]

script = ExtResource( 3 )
_sections_unfolded = [ "Pause" ]

[node name="floor" type="StaticBody2D" parent="world" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world/floor" index="0"]

position = Vector2( 1187, 700 )
scale = Vector2( 110, 1.42222 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Floor_spwn" parent="world/floor" index="1" instance=ExtResource( 4 )]

[node name="OS2" parent="world/floor" index="2" instance=ExtResource( 5 )]

position = Vector2( 1360, 673 )

[node name="Dino_Player" type="KinematicBody2D" parent="world" index="1"]

editor/display_folded = true
position = Vector2( 140, 623.827 )
scale = Vector2( 0.8, 0.8 )
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 6 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="world/Dino_Player" index="0"]

scale = Vector2( 4.33473, 4.33497 )
shape = SubResource( 2 )
script = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="world/Dino_Player" index="1"]

scale = Vector2( 1.26525, 1.26689 )
frames = SubResource( 3 )
animation = "running"
frame = 2
playing = true
script = ExtResource( 14 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="dino_area" type="Area2D" parent="world/Dino_Player" index="2"]

scale = Vector2( 0.875, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 15 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world/Dino_Player/dino_area" index="0"]

position = Vector2( 2, -15 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Dino_enemy" type="KinematicBody2D" parent="world" index="2"]

editor/display_folded = true
modulate = Color( 0.824219, 0.537674, 0.537674, 1 )
position = Vector2( 65, 623.366 )
scale = Vector2( 0.8, 0.8 )
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 16 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="world/Dino_enemy" index="0"]

scale = Vector2( 4.33473, 4.33497 )
shape = SubResource( 5 )
script = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="world/Dino_enemy" index="1"]

scale = Vector2( 1.26525, 1.26689 )
frames = SubResource( 6 )
animation = "running"
frame = 2
playing = true
script = ExtResource( 14 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="dino_area" type="Area2D" parent="world/Dino_enemy" index="2"]

scale = Vector2( 0.875, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 15 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world/Dino_enemy/dino_area" index="0"]

position = Vector2( 2, -15 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="ReloadButton" type="TextureButton" parent="world" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 122.0
margin_right = 393.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
_sections_unfolded = [ "Textures" ]

[node name="DoubleUp_button" type="TextureButton" parent="world" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1078.0
margin_top = 238.0
margin_right = 1150.0
margin_bottom = 314.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Down_button" type="TextureButton" parent="world" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1202.0
margin_top = 674.0
margin_right = 1266.0
margin_bottom = 738.0
rect_rotation = -179.377
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
_sections_unfolded = [ "Rect" ]

[node name="Up_button" type="TextureButton" parent="world" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1070.0
margin_top = 406.0
margin_right = 1134.0
margin_bottom = 470.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ScoreBoard" parent="world" index="7" instance=ExtResource( 20 )]

margin_left = 607.0
margin_top = 117.0
margin_right = 982.0
margin_bottom = 299.0
custom_fonts/normal_font = SubResource( 8 )
script = ExtResource( 22 )

[node name="Menu" type="Button" parent="world" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 129.0
margin_top = 128.0
margin_right = 237.0
margin_bottom = 184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="PlayerWins" type="Panel" parent="world" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 350.0
margin_right = 827.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="world/PlayerWins" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
text = "Player Wins!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Mouse", "Rect", "Visibility", "custom_colors" ]

[node name="AIwins" type="Panel" parent="world" index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 350.0
margin_right = 827.0
margin_bottom = 511.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="world/AIwins" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
text = "AI Dino Wins!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Mouse", "Rect", "Visibility", "custom_colors" ]

[connection signal="_dead" from="world/Dino_Player" to="." method="_on_Dino_Player__dead"]

[connection signal="_duck" from="world/Dino_Player" to="world/Dino_Player/dino_area" method="_on_Dino__duck"]

[connection signal="_duck" from="world/Dino_Player" to="world/Dino_Player/AnimatedSprite" method="_on_Dino__duck"]

[connection signal="_stand" from="world/Dino_Player" to="world/Dino_Player/dino_area" method="_on_Dino__stand"]

[connection signal="_stand" from="world/Dino_Player" to="world/Dino_Player/AnimatedSprite" method="_on_Dino__stand"]

[connection signal="in_air" from="world/Dino_Player" to="world/Dino_Player/AnimatedSprite" method="_on_Dino_in_air"]

[connection signal="on_ground" from="world/Dino_Player" to="world/Dino_Player/AnimatedSprite" method="_on_Dino_on_ground"]

[connection signal="area_entered" from="world/Dino_Player/dino_area" to="world/Dino_Player" method="_on_dino_area_area_entered"]

[connection signal="_dead" from="world/Dino_enemy" to="." method="_on_Dino_enemy__dead"]

[connection signal="_duck" from="world/Dino_enemy" to="world/Dino_enemy/AnimatedSprite" method="_on_Dino__duck"]

[connection signal="_duck" from="world/Dino_enemy" to="world/Dino_enemy/dino_area" method="_on_Dino__duck"]

[connection signal="_stand" from="world/Dino_enemy" to="world/Dino_enemy/AnimatedSprite" method="_on_Dino__stand"]

[connection signal="_stand" from="world/Dino_enemy" to="world/Dino_enemy/dino_area" method="_on_Dino__stand"]

[connection signal="in_air" from="world/Dino_enemy" to="world/Dino_enemy/AnimatedSprite" method="_on_Dino_in_air"]

[connection signal="on_ground" from="world/Dino_enemy" to="world/Dino_enemy/AnimatedSprite" method="_on_Dino_on_ground"]

[connection signal="area_entered" from="world/Dino_enemy/dino_area" to="world/Dino_enemy" method="_on_dino_area_area_entered"]

[connection signal="pressed" from="world/ReloadButton" to="." method="_on_ReloadButton_pressed"]

[connection signal="pressed" from="world/DoubleUp_button" to="world/Dino_Player" method="_on_DoubleUp_button_pressed"]

[connection signal="button_down" from="world/Down_button" to="world/Dino_Player" method="_on_Down_button_button_down"]

[connection signal="button_up" from="world/Down_button" to="world/Dino_Player" method="_on_Down_button_button_up"]

[connection signal="pressed" from="world/Up_button" to="world/Dino_Player" method="_on_Up_button_pressed"]

[connection signal="pressed" from="world/Menu" to="." method="_on_Button_pressed"]


